# SFML-RPG

./: .gitignore  CMakeLists.txt  game.cpp  game.h  main.cpp  pch.h
config/: editor_state_keybinds.ini  main_menu_state_keybinds.ini  supported_keys.ini  window.ini
engine/: button.cpp  button.h  entity.cpp  entity.h  movement_component.cpp  movement_component.h  state.cpp  state.h
engine/entity_components/: animation_component.cpp  animation_component.h  hitbox_component.cpp  hitbox_component.h  movement_component.cpp  movement_component.h
engine/gui/: button.cpp  button.h  combo_box.cpp  combo_box.h
engine/tile/: tile.cpp  tile.h  tile_map.cpp  tile_map.h
entities/: player.cpp  player.h
gui/: pause_menu.cpp  pause_menu.h
states/: editor_state.cpp  editor_state.h  game_state.cpp  game_state.h  main_menu_state.cpp  main_menu_state.h  settings_state.cpp  settings_state.h
textures/: readMe_.txt
